crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_cargo_output_failure.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1092
expression: output
---
CargoOutput {
    exit_code: 101,
    stdout_tail: "",
    stderr_tail: "error: failed to verify package tarball",
    duration: 3.2s,
    timed_out: false,
}
