crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_cargo_output_success.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1080
expression: output
---
CargoOutput {
    exit_code: 0,
    stdout_tail: "published shipper v0.3.0",
    stderr_tail: "",
    duration: 12s,
    timed_out: false,
}
