crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_cargo_output_timeout.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1104
expression: output
---
CargoOutput {
    exit_code: -1,
    stdout_tail: "",
    stderr_tail: "cargo publish timed out after 300s",
    duration: 300s,
    timed_out: true,
}
