crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_cargo_output_with_multiline_stderr.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1168
expression: output
---
CargoOutput {
    exit_code: 1,
    stdout_tail: "",
    stderr_tail: "warning: unused variable\nerror[E0308]: mismatched types\n  --> src/lib.rs:10:5",
    duration: 1.5s,
    timed_out: false,
}
