crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_cargo_output_zero_duration.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1192
expression: output
---
CargoOutput {
    exit_code: 0,
    stdout_tail: "ok",
    stderr_tail: "",
    duration: 0ns,
    timed_out: false,
}
