crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_invalid_package_names.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1156
expression: results
---
[
    (
        "",
        false,
    ),
    (
        "123-start",
        false,
    ),
    (
        "-hyphen-start",
        false,
    ),
    (
        "MyCrate",
        false,
    ),
    (
        "my.crate",
        false,
    ),
    (
        "my crate",
        false,
    ),
    (
        "my@crate",
        false,
    ),
]
