crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_package_info_prerelease_version.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1180
expression: info
---
name: my-alpha-crate
version: 0.0.1-alpha.0+build.123
manifest_path: crates/my-alpha-crate/Cargo.toml
is_workspace_member: true
publish: []
