crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_package_info_with_registries.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1128
expression: info
---
name: my-private-crate
version: 1.2.3-beta.1
manifest_path: crates/my-private-crate/Cargo.toml
is_workspace_member: false
publish:
  - crates-io
  - my-private-registry
