crates/shipper-cargo/src/snapshots/shipper_cargo__tests__snapshot_tests__snapshot_valid_package_names.snap
---
source: crates/shipper-cargo/src/lib.rs
assertion_line: 1138
expression: results
---
[
    (
        "my-crate",
        true,
    ),
    (
        "my_crate",
        true,
    ),
    (
        "a",
        true,
    ),
    (
        "_private",
        true,
    ),
    (
        "crate-with-123",
        true,
    ),
]
